--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,19 @@
 .App {
   text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  
+  width: 50%;
+  margin: 5rem auto;
+  background-color:rgb(228, 227, 227);
+  padding: 1rem;
 }
 
 
+@media only screen and (max-width: 800px) {
+  .App {
+    text-align: center;
+    width: 100%;
+    margin: 0 auto;
+    background-color:rgb(255, 255, 255);
+    padding: 1rem;
+  }
+  
+}
