--- a/src/component/AddItem/AddItem.css
+++ b/src/component/AddItem/AddItem.css
@@ -1,3 +1,32 @@
 .formAdd{
-    color: #000;
+    padding: 2rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    border-bottom: 1px solid #eee;
+}
+.sbtm{
+    width: 30%;
+    color: #fff;
+    background-color: #007bff;
+    border-color: #007bff;
+    padding: 14px 20px;
+    margin: 8px 1rem;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    
+}
+.sbtm:hover {
+    background-color: #0563c7;
+  }
+  
+.insub{
+    width: 60%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
 }
