--- a/src/component/ViewItem/ViewItem.css
+++ b/src/component/ViewItem/ViewItem.css
@@ -1,3 +1,105 @@
-.View{
-    color: black;
+.dataIn{
+    padding:1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    text-align: left;
 }
+.dataIn span{
+width: 80%;
+}
+.dataDelete{
+    width: 20%;
+    padding: 14px 20px;
+    margin: 0px 1px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    color: #fff;
+    background-color: #dc3545;
+    border-color: #dc3545;
+}
+.dataDelete:hover{
+    background-color: #c02f3e;
+
+}
+.dataUpdate{
+    width: 20%;
+
+    padding: 14px 20px;
+    margin: 0px 1px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    color: #fff;
+    background-color: #007bff;
+    border-color: #007bff;
+}
+.dataUpdate:hover{
+    background-color: #0563c7;
+
+}
+
+.formAdd2{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+}
+.formAdd2 button{
+    width: 30%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 1rem;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+.formAdd2 button:hover{
+    background-color: #45a049;
+
+}
+.formAdd2 input{
+    width: 60%;
+
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+
+@media only screen and (max-width: 400px) {
+    .dataIn{
+        padding:.2rem;
+    }
+
+    .dataIn span{
+        width: 50%;
+    }
+    .dataDelete{
+        width: 23%;
+        margin-left: .5rem;
+
+    }
+
+    .dataUpdate{
+        width: 23%;
+
+    }
+
+    .formAdd2 button{
+        width: 30%;
+    }
+
+    .formAdd2 input{
+        width: 100%;
+    
+    }
+    
+}
+    
